[tool.poetry]
name = "raid10"
version = "0.1.0"
description = ""
authors = ["TungCheng Chen(OmniEyes) <rondou.chen@theomnieyes.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"
aiofile = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
